#!/usr/bin/env python3
"""
ATCG Translation Layer Demo
Demonstrates pure bridge between biological metaphors and protobuf schemas
"""

import sys
import json
from datetime import datetime
from pathlib import Path

# Add hive module to path
sys.path.append(str(Path(__file__).parent))

from hive.primitives import Aggregate, Transformation, Connector, GenesisEvent
from hive.translation_layer import (
    backend_translator, 
    translate_hive_component_to_protobuf,
    get_backend_translation_metrics
)

def create_sample_components():
    """Create sample components with biological metaphors"""
    print("üß¨ Creating sample components with biological metaphors...")
    
    # Create Aggregate with biological metadata
    aggregate = Aggregate(
        name="UserDataOrganelle",
        invariants=["non_empty_name", "positive_value"]
    )
    aggregate.metadata = {
        "hive_id": "primary_colony",
        "organism_type": "data_processor",
        "dna_sequence": "ATCG-USER-DATA-001",
        "enzyme_function": "user_validation",
        "cell_membrane": "authentication_boundary"
    }
    
    # Create Transformation with biological metadata
    async def sample_processor(data):
        return {"processed": True, "data": data}
    
    transformation = Transformation(
        name="DataEnzymeProcessor",
        processor_func=sample_processor
    )
    transformation.metadata = {
        "enzyme_type": "data_catalyst",
        "reaction_rate": "high",
        "substrate_affinity": "json_data",
        "product_yield": "validated_data"
    }
    
    # Create Connector with biological metadata
    connector = Connector(
        name="NeuralNetworkBridge",
        input_protocol="websocket",
        output_protocol="pollen"
    )
    connector.metadata = {
        "nervous_system": "central",
        "synapse_type": "excitatory",
        "neurotransmitter": "json_messages",
        "signal_strength": "strong"
    }
    
    # Create GenesisEvent with biological metadata
    async def sample_broadcaster(event):
        return True
    
    genesis = GenesisEvent(
        name="CellDivisionEvent",
        event_type="user_created",
        broadcast_func=sample_broadcaster
    )
    genesis.metadata = {
        "dna_replication": "enabled",
        "mitosis_phase": "prophase",
        "chromosome_count": "46",
        "cell_cycle": "active"
    }
    
    return [aggregate, transformation, connector, genesis]

def demonstrate_translation():
    """Demonstrate translation from biological metaphors to pure protobuf"""
    print("\nüîÑ Demonstrating Translation Layer...")
    
    components = create_sample_components()
    
    for i, component in enumerate(components, 1):
        print(f"\n--- Component {i}: {type(component).__name__} ---")
        
        # Show original component with biological metaphors
        print("üß¨ Original (Biological Metaphors):")
        print(f"  Type: {type(component).__name__}")
        print(f"  Name: {component.name}")
        print(f"  ID: {component.id}")
        print("  Metadata (Biological):")
        for key, value in component.metadata.items():
            print(f"    {key}: {value}")
        
        # Translate to pure protobuf
        try:
            protobuf_component = translate_hive_component_to_protobuf(component)
            
            print("\nüïäÔ∏è Translated (Pure Protobuf):")
            print(f"  Type: {protobuf_component.type}")
            print(f"  ID: {protobuf_component.id}")
            print("  Metadata (Pure):")
            for key, value in protobuf_component.metadata.items():
                print(f"    {key}: {value}")
            
            # Validate translation
            validation = backend_translator.validate_translation(component, protobuf_component)
            print(f"\n‚úÖ Translation Valid: {validation['valid']}")
            print(f"üéØ Fidelity Score: {validation['fidelity_score']:.2f}")
            
            if validation['errors']:
                print("‚ùå Errors:")
                for error in validation['errors']:
                    print(f"    {error}")
            
            if validation['warnings']:
                print("‚ö†Ô∏è Warnings:")
                for warning in validation['warnings']:
                    print(f"    {warning}")
                    
        except Exception as e:
            print(f"‚ùå Translation failed: {e}")

def demonstrate_bidirectional_translation():
    """Demonstrate bidirectional translation"""
    print("\nüîÑ Demonstrating Bidirectional Translation...")
    
    # Create original component
    original = Aggregate(name="TestAggregate")
    original.metadata = {
        "hive_id": "test_colony",
        "dna_sequence": "ATCG-TEST-001"
    }
    
    print("üß¨ Original Component:")
    print(f"  Type: {type(original).__name__}")
    print(f"  ID: {original.id}")
    print(f"  Metadata: {original.metadata}")
    
    # Translate to protobuf
    protobuf_comp = translate_hive_component_to_protobuf(original)
    print(f"\nüïäÔ∏è Pure Protobuf:")
    print(f"  Type: {protobuf_comp.type}")
    print(f"  ID: {protobuf_comp.id}")
    print(f"  Metadata: {protobuf_comp.metadata}")
    
    # Translate back to internal format
    restored = backend_translator.translate_from_protobuf(protobuf_comp)
    print(f"\nüîÑ Restored Internal:")
    print(f"  Type: {restored['type']}")
    print(f"  ID: {restored['id']}")
    print(f"  Metadata: {restored['metadata']}")
    
    # Check round-trip fidelity
    print(f"\nüéØ Round-trip Fidelity:")
    print(f"  ID preserved: {original.id == restored['id']}")
    print(f"  Type preserved: {type(original).__name__ == restored['type']}")
    
    # Check metadata mapping
    original_keys = set(original.metadata.keys())
    restored_keys = set(restored['metadata'].keys())
    print(f"  Metadata keys mapped: {len(original_keys & restored_keys)} / {len(original_keys)}")

def show_translation_metrics():
    """Show translation layer performance metrics"""
    print("\nüìä Translation Layer Metrics:")
    
    metrics = get_backend_translation_metrics()
    
    print(f"  Total Translations: {metrics['translations_performed']}")
    print(f"  Successful: {metrics['successful_translations']}")
    print(f"  Failed: {metrics['failed_translations']}")
    print(f"  Success Rate: {metrics['success_rate_percent']:.1f}%")
    print(f"  Average Time: {metrics['average_translation_time_ms']:.2f}ms")
    print(f"  Last Updated: {metrics['last_updated']}")

def demonstrate_ontological_purity():
    """Demonstrate ontological purity at boundaries"""
    print("\nüïäÔ∏è Demonstrating Ontological Purity...")
    
    # Create component with heavy biological metaphors
    component = Aggregate(name="DNAProcessor")
    component.metadata = {
        "organism_type": "data_cell",
        "dna_sequence": "ATCG-COMPLEX-001",
        "enzyme_function": "data_replication",
        "cell_membrane": "security_boundary",
        "mitochondria": "power_source",
        "nucleus": "control_center",
        "ribosome": "protein_synthesis"
    }
    
    print("üß¨ Internal Component (Rich Biological Metaphors):")
    print(f"  Name: {component.name}")
    print("  Biological Metadata:")
    for key, value in component.metadata.items():
        print(f"    {key}: {value}")
    
    # Translate to pure protobuf
    protobuf_comp = translate_hive_component_to_protobuf(component)
    
    print(f"\nüïäÔ∏è Pure Protobuf Boundary (No Metaphors):")
    print(f"  Type: {protobuf_comp.type}")
    print("  Pure Metadata:")
    for key, value in protobuf_comp.metadata.items():
        print(f"    {key}: {value}")
    
    print(f"\n‚ú® Ontological Purity Achieved:")
    print(f"  ‚úÖ No biological terms in protobuf schema")
    print(f"  ‚úÖ Metaphors contained within implementation")
    print(f"  ‚úÖ Pure communication boundary maintained")
    print(f"  ‚úÖ Functional behavior preserved")

def main():
    """Main demo function"""
    print("üéØ ATCG Translation Layer Demonstration")
    print("=" * 50)
    print("üïäÔ∏è Testing Pure Bridge Between Metaphors and Protobuf")
    
    try:
        demonstrate_translation()
        demonstrate_bidirectional_translation()
        demonstrate_ontological_purity()
        show_translation_metrics()
        
        print("\n" + "=" * 50)
        print("‚úÖ Translation Layer Demo Complete!")
        print("üïäÔ∏è Ontological purity maintained at all boundaries")
        print("üîÑ Bidirectional translation working correctly")
        print("üìä Performance metrics collected successfully")
        
    except Exception as e:
        print(f"\n‚ùå Demo failed: {e}")
        import traceback
        traceback.print_exc()
        return False
    
    return True

if __name__ == "__main__":
    success = main()
    sys.exit(0 if success else 1)